--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,38 +1,46 @@
 h1 {
+  font-family: monospace;
   text-align: center;
 }
 
 h2 {
+  font-family: monospace;
   text-align: center;
 }
 
 .Android {
+  color: #B3B6B7;
+  font-variant: small-caps;
+  font-family: fantasy;
   float: left;
   text-align: center;
   display: block;
   width: 50%;
-  background-color: white;
+  background-color: #34495E;
   font-size: 30;
 }
 
 .IOS {
+  color: #B3B6B7;
+  font-family: fantasy;
+  font-variant: small-caps;
   float: left;
   text-align: center;
   display: block;
   width: 50%;
-  background-color: white;
+  background-color: #34495E;
   font-size: 30;
 }
 
 .AppTalk_A {
+  font-family: fantasy;
   float: left;
   text-align: center;
   display: block;
   width: 29%;
   height: 125;
   font-size: 20;
-  background-color: #ECF0F1;
-  color: #1D8348
+  background-color: white;
   border: 1px;
   border: 1px dotted;
   border: solid black;
@@ -41,14 +49,14 @@ h2 {
 }
 
 .AppTalk_I {
+  font-family: fantasy;
   float: left;
   text-align: center;
   display: block;
   width: 29%;
   height: 125;
   font-size: 20;
-  background-color: #ECF0F1;
-  color: #1D8348
+  background-color: white;
   border: 1px;
   border: 1px dotted;
   border: solid black;
